--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-pydantic==2.5.2
-pyodbc==5.0.1  # For SQL Server connection
+fastapi
+uvicorn
+sqlalchemy
+pydantic
+python-dotenv
+pydantic_settings
+pymssql
